--- a/src/main/resources/static/bower.json
+++ b/src/main/resources/static/bower.json
@@ -18,6 +18,8 @@
     "angular-route": "~1.4.2",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "code-prettify": "*"
+    "code-prettify": "*",
+    "moment": "~2.10.3",
+    "angular-moment": "~0.10.1"
   }
 }
