start on query stuff

--- a/src/main/resources/static/bower.json
+++ b/src/main/resources/static/bower.json
@@ -20,6 +20,6 @@
     "jquery": "~2.1.4",
     "code-prettify": "*",
     "moment": "~2.10.3",
-    "angular-moment": "~0.10.1"
+    "angular-moment": "~0.10.1",
   }
 }
